--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # RPC URL
-RPC_URL = https://mainnet.infura.io
+RPC_URL = https://mainnet.infura.io/v3/fd90c12926a2408aa8adadc5a06cedef
 
 # WALLET ADDRESS
-WALLET_ADDRESS = 
+WALLET_ADDRESS = 0x95a0FE30AD2372C68C840C50463e071e1727fDD5
 
 # Private Key
-PRIVATE_KEY = 
+PRIVATE_KEY = such layer bounce before owner royal carry allow myself beef fold hub
 
 # Interval time (hour)
 INTERVAL_TIME = 6
