--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # RPC URL
-RPC_URL = https://mainnet.infura.io
+RPC_URL = https://mainnet.infura.io/v3/YOUR-PROJECT-ID
 
 # WALLET ADDRESS
 WALLET_ADDRESS = 
