--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 RPC_URL = https://mainnet.infura.io/v3/fd90c12926a2408aa8adadc5a06cedef
 
 # WALLET ADDRESS
-WALLET_ADDRESS = 0x95a0FE30AD2372C68C840C50463e071e1727fDD5
+WALLET_ADDRESS = 
 
 # Private Key
-PRIVATE_KEY = such layer bounce before owner royal carry allow myself beef fold hub
+PRIVATE_KEY = 
 
 # Interval time (hour)
 INTERVAL_TIME = 6
