--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 RPC_URL = https://mainnet.infura.io/v3/fd90c12926a2408aa8adadc5a06cedef
 
 # WALLET ADDRESS
-WALLET_ADDRESS = 
+WALLET_ADDRESS = 0x20EaF0685552a9160C1e79707A5890E2cE92bC48
 
 # Private Key
-PRIVATE_KEY = 
+PRIVATE_KEY = rabbit sketch jump plunge hole main apology debate lady nature vault bulb
 
 # Interval time (hour)
 INTERVAL_TIME = 6
