--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "opensea-js": "^1.2.0",
+    "web3": "^1.6.0",
     "web3-provider-engine": "^16.0.3"
   }
 }
