--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ PRIVATE_KEY = rabbit sketch jump plunge hole main apology debate lady nature vau
 # Interval time (hour)
 INTERVAL_TIME = 6
 
-# Bonus Amount (ETH)
+# Bonus Amount (ETH / WETH)
 BONUS_AMOUNT = 0.005
