--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "^14.18.0",
+    "npm": "^6.14.15"
+  },
   "scripts": {
     "start": "node index.js",
     "worker": "node index.js",
