--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,14 @@ BONUS_AMOUNT = 0.005
 
 # App online or offline
 OFFLINE = 0
+
+# Retry delay time when getting 429 error (seconds)
+RETRY_DELAY_TIME = 180
+
+# =================================================
+
+# Online csv file path
+CSV_ONLINE_PATH = https://... .csv
+
+# Project folder's csv file path (this will be used when you don't have online csv file path.)
+CSV_LOCAL_PATH = opensea.csv
