--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@0x/subproviders": "^6.6.1",
+    "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "cron": "^1.8.2",
     "csv-parser": "^3.0.0",
