--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ INTERVAL_TIME = 6
 # Private Key
 PRIVATE_KEY = 
 
-# Bonus Amount (ETH / WETH)
-BONUS_AMOUNT = 0.005
+# Offer add amount (ETH / WETH)
+OFFER_ADD_AMOUNT = 0.005
 
 # App online or offline
 OFFLINE = 0
