--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ OFFER_ADD_AMOUNT = 0.005
 
 # App online or offline
 OFFLINE = 0
+ONLINE_CSV = 0
+
+# First bid schema name
+FIRST_SCHEMA_NAME = ERC1155
 
 # Retry delay time when getting 429 error (seconds)
 RETRY_DELAY_TIME = 180
