Added OFFER_EXPIRE_TIME to env

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ WALLET_ADDRESS =
 # Interval time (hour)
 INTERVAL_TIME = 6
 
+# Offer Expire time (hours)
+OFFER_EXPIRE_TIME = 24
+
 # Private Key
 PRIVATE_KEY = 
 
