--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@0x/subproviders": "^6.6.1",
+    "api": "^3.4.2",
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "cron": "^1.8.2",
