Added ABI checking code

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # RPC URL
 RPC_URL = https://mainnet.infura.io/v3/YOUR-PROJECT-ID
 
+# etherscan api key
+ETHERSCAN_API_KEY = 
+
 # WALLET ADDRESS
 WALLET_ADDRESS = 
 
