--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "opensea-autobidder",
+  "name": "node-opensea-edge",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "start": "node index.js",
     "worker": "node index.js",
