--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ ETHERSCAN_API_KEY =
 # WALLET ADDRESS
 WALLET_ADDRESS = 
 
-# Interval time (hour)
+# Interval time to perform automated offer (hours)
 INTERVAL_TIME = 6
 
 # Offer Expire time (hours)
@@ -19,17 +19,19 @@ PRIVATE_KEY =
 # Offer add amount (ETH / WETH)
 OFFER_ADD_AMOUNT = 0.005
 
-# App online or offline
+# Set app offline for maintenance (1 = true, 0 = false)
 OFFLINE = 0
-ONLINE_CSV = 0
 
 # Retry delay time when getting 429 error (seconds)
 RETRY_DELAY_TIME = 180
 
 # =================================================
 
-# Online csv file path
-CSV_ONLINE_PATH = https://... .csv
+# Use online csv (1 = true, 0 = false)
+ONLINE_CSV = 0
 
-# Project folder's csv file path (this will be used when you don't have online csv file path.)
-CSV_LOCAL_PATH = opensea.csv
+# Online csv file path
+# CSV_ONLINE_PATH = https://... .csv
+
+# Project folder's csv file path
+CSV_LOCAL_PATH = nft_lists/opensea.csv
