--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "^14.17.3",
+    "yarn": "^1.22.15",
+    "npm": "^6.14.13"
+  },
   "scripts": {
     "start": "node index.js",
     "worker": "node index.js",
